# TradingAgentsChina

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  cli.py
app/agents/: __init__.py  announcement_agent.py  bear_researcher.py  bull_researcher.py  capital_flow_agent.py  (+8 more)
config/: deepseek.env.example  market-data.env.example  mcp.server.example.json  tradingos.default.json
database/: schema.sql
mcp/: china_stock_tools.json
tests/: test_a_share_characteristics.py  test_a_share_risk_scanner.py  test_ah_premium.py  test_akshare_provider.py  test_announcement_impact.py  test_backtest_engine.py  test_capital_flow_continuity.py  test_data_quality_validation.py  test_data_readiness.py  test_deepseek_client.py  test_domain_signal_contracts.py  test_domain_skills.py  test_dragon_tiger_agent.py  test_eastmoney_provider.py  test_evidence_brief.py  test_evidence_chain.py  test_fundamental_analysis.py  test_industry_prosperity.py  test_intraday_analysis.py  test_investment_committee.py  test_market_breadth_confirmation.py  test_market_data_contracts.py  test_mcp_contracts.py  test_mcp_server.py  test_memory.py  test_model_runtime.py  test_morning_radar.py  test_network_retry.py  test_next_session_scenario.py  test_opportunity_pipeline.py  test_partial_verified_skills.py  test_playbook_backtest_specs.py  test_playbooks.py  test_portfolio_snapshot.py  test_price_observation_zones.py  test_production_integrity.py  test_production_provider.py  test_production_workflow.py  test_provider_high_availability.py  test_public_fallback_provider.py  (+18 more)
(+164 files in other folders)
